# thing-esp32-c3

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flash.sh
.cargo/: config.toml
src/: app.rs  lamp.rs  main.rs  mqtt.rs  nvs_uuid.rs  observer.rs  thing.rs  thing_mqtt.rs  thing_protocol.rs  wifi.rs
